--- a/index.html
+++ b/index.html
@@ -14,20 +14,16 @@
 
     <main>
         <section>
-            <h1 class="texto-da-secao">Calculadora</h1>
+            <h1 class="texto-da-secao">Veja sua sorte meu querido :)</h1>
             <div class="box1">
                 <label for="nome-usuario" class="name">Olha o nome da lenda: </label>
-                <div class="nome"></div>
+                <div class="nome" id="log"></div>
                 <a href="#"><button onclick="ativarNome()" class="botao1">Concluído</button></a>
             </div>
 
             <div class="box2">
-                <input type="number" class="numeros" placeholder="Digite um número">
-                <input type="number" class="numeros" placeholder="Digite um número">
-                <select class="operacao">
-                    <option>Adição</option>
-                    <option>Subtração</option>
-                </select>
+                <label class="name">Olha seu número da sorte baby: </label>
+                <div class="nome" id="log2"></div>
                 <a href="#"><button onclick="somarNumeros()" class="botao2">Concluído</button></a>
             </div>
         </section>
